--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="brown">#5D4037</color>
+    <color name="lbrown">#D7CCC8</color>
+    <color name="accent">#9E9E9E</color>
+    <color name="colorFive">#F7C51E</color>
+
 </resources>
